# duckdb

examples/embedded-c++/: CMakeLists.txt  main.cpp
